<resources>
    <string name="app_name">AICatching</string>
    <string name="user_avatar">User\'s Avatar</string>
    <string name="outfit_of_the_day">Outfit \nof the day</string>
    <string name="my_wardrobe">My wardrobe</string>
    <string name="new_cloth">New cloth</string>
    <string name="take_photo">Take Photo</string>
    <string name="start_capture">Start Capture</string>
    <string name="stop_capture">Stop Capture</string>
    <string name="category_place_holder">Category Place Holder</string>
    <string name="cloth">Cloth</string>
    <string name="your_outfit">Your outfit</string>
    <string name="check_wardrobe">Check wardrobe</string>
    <string name="description">Description</string>
    <string name="change_avatar">Change avatar</string>
    <string name="delete_account">Delete account</string>
    <string name="log_out">Log Out</string>
    <string name="username">Username</string>
    <string name="shoe_size_before_set">Shoe\nsize</string>
    <string name="cloth_size_before_set">Cloth\nsize</string>
    <string name="fav_color">Favourite color</string>
    <string name="shoe_size">Shoe size</string>
    <string name="cloth_size">Cloth size</string>
    <string name="web_client_id">1030459182-pbc99pgfovl6244mlhm0i7j8lc0ps4ee.apps.googleusercontent.com</string>
    <string name="welcome">Welcome to your outfit creator!</string>
    <string name="editAttributeValue">Attribute Value</string>
    <string name="search">Search</string>
</resources>
