<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/cloth_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/cloth"
            android:adjustViewBounds="true"
            android:contentDescription="@string/cloth"/>
        <TextView
            android:id="@+id/cloth_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/category_place_holder"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/your_outfit"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/check_wardrobe"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>