<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_page_toolbar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/pink"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="1.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/userAvatar"
        android:layout_width="@dimen/user_avatar_size"
        android:layout_height="@dimen/user_avatar_size"
        android:layout_margin="@dimen/margin"
        android:src="@drawable/ic_avatar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/username"
        android:layout_width="@dimen/match_rest_space"
        android:layout_height="@dimen/username_height"
        android:layout_margin="@dimen/margin"
        android:gravity="fill_vertical"
        android:padding="@dimen/padding"
        android:text="@string/username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/userAvatar"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/clothSizeAttribute"
        style="@style/RhombusWithText"
        android:layout_marginStart="@dimen/margin"
        android:text="@string/cloth_size_before_set"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/userAvatar"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/shoeSizeAttribute"
        style="@style/RhombusWithText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shoe_size_before_set"
        app:layout_constraintStart_toEndOf="@+id/clothSizeAttribute"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/favColorAttribute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/RhombusWithText"
        app:layout_constraintStart_toEndOf="@+id/shoeSizeAttribute"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/appendUserDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/ic_info_in_rhombus"
        app:layout_constraintStart_toEndOf="@+id/favColorAttribute"
        app:layout_constraintTop_toBottomOf="@+id/username" />

</androidx.constraintlayout.widget.ConstraintLayout>
