<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/currentUserAvatar"
        android:layout_width="@dimen/showings_size"
        android:layout_height="@dimen/showings_size"
        android:layout_margin="@dimen/margin"
        android:src="@drawable/ic_avatar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/changeUserPhotoButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/pink"
        android:layout_margin="@dimen/margin"
        android:padding="@dimen/padding"
        android:text="@string/change_avatar"
        app:layout_constraintBottom_toBottomOf="@id/currentUserAvatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/currentUserAvatar"
        app:layout_constraintTop_toTopOf="@id/currentUserAvatar" />

    <View
        android:id="@+id/avatarSectionLineBottom"
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_height"
        android:background="@color/gray"
        android:layout_margin="@dimen/margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currentUserAvatar"
        app:layout_constraintBottom_toTopOf="@+id/favColorPickerView"/>

    <com.skydoves.colorpickerview.ColorPickerView
        android:id="@+id/favColorPickerView"
        android:layout_width="@dimen/showings_size"
        android:layout_height="@dimen/showings_size"
        android:padding="@dimen/padding"
        android:layout_margin="@dimen/margin"
        app:layout_constraintTop_toBottomOf="@id/avatarSectionLineBottom"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/favColorLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fav_color"
        android:layout_margin="@dimen/margin"
        app:layout_constraintStart_toEndOf="@id/favColorPickerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/favouriteColorView"
        />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/favouriteColorView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/RhombusWithText"
        app:layout_constraintBottom_toBottomOf="@id/favColorPickerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/favColorPickerView"
        app:layout_constraintTop_toTopOf="@id/favColorPickerView"  />

    <View
        android:id="@+id/colorSectionLineBottom"
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_height"
        android:background="@color/gray"
        android:layout_margin="@dimen/margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/favColorPickerView"
        app:layout_constraintBottom_toTopOf="@+id/garmentSizeSpinner"/>

    <TextView
        android:id="@+id/garmentSizeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:text="@string/garment_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/garmentSizeSpinner"
        app:layout_constraintBottom_toBottomOf="@id/garmentSizeSpinner"
        />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/garmentSizeSpinner"
        android:layout_width="@dimen/details_spinner_width"
        android:layout_height="@dimen/details_spinner_height"
        android:layout_margin="@dimen/margin"
        style="@style/Spinner"
        app:layout_constraintTop_toBottomOf="@id/colorSectionLineBottom"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/shoeSizeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shoe_size"
        android:layout_margin="@dimen/margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/shoeSizeSpinner"
        app:layout_constraintBottom_toBottomOf="@id/shoeSizeSpinner"
        />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/shoeSizeSpinner"
        android:layout_width="@dimen/details_spinner_width"
        android:layout_height="@dimen/details_spinner_height"
        android:layout_margin="@dimen/margin"
        style="@style/Spinner"
        app:layout_constraintTop_toBottomOf="@id/garmentSizeSpinner"
        app:layout_constraintEnd_toEndOf="parent"/>

    <View
        android:id="@+id/dangerSectionLineBottom"
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_height"
        android:background="@color/gray"
        android:layout_margin="@dimen/margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shoeSizeSpinner"
        app:layout_constraintBottom_toTopOf="@+id/logOutButton"/>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/logOutButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        app:layout_constraintTop_toBottomOf="@id/dangerSectionLineBottom"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/pink"
        android:text="@string/log_out"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/deleteAccountButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        app:layout_constraintTop_toBottomOf="@id/logOutButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/pink"
        android:text="@string/delete_account"
        />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="invisible"
        android:backgroundTint="@color/white"
        android:indeterminateTint="@color/pink"
        android:layout_margin="@dimen/logging_toolbar_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/deleteAccountButton"/>
</androidx.constraintlayout.widget.ConstraintLayout>
